# virtual-rsp-2

./: .gitignore  02-ARCHITECTURE.md  04-V-EUICC.md  05-MODIFICATIONS.md  06-GUI-CONTROL-CENTER.md  09-TROUBLESHOOTING.md  CMakeLists.txt  GUI-QUICKSTART.md  GUI-STATUS.md  IMPLEMENTATION-SUMMARY.md  PQC_COMPLETE.md  PQC_DEMO_GUIDE.md  PQC_IMPLEMENTATION_STATUS.md  PQC_VERIFICATION.md  QUICK_START.md  README.md  SGP22_Profile_Download_and_Installation.md  add-hosts-entry.sh  demo-detailed.sh  demo-mutual-auth.sh  demo-pqc-detailed.sh  demo-pqc-mldsa.sh  demo-pqc-simple.sh  demo-profile-install.sh  demo-profile-menu.sh  demo_logging.py  init-profiles-db.py  log_monitor.py  logging.c  logging.h  package-lock.json  plan.md  pySim  requirements-gui.txt  run-complete-test.sh  run-gui.sh  run-mno.sh  run-smdpp-https.sh  teardown.sh  test-all.sh  (+10 more)
.github/workflows/: deploy-docs.yml
data/: profiles.json  test_profiles.json
docs/: 01-SETUP.md  03-RSP-FLOW.md  07-GUI-MNO-CONSOLE.md  08-DEMO-SCRIPT.md  README.md
docs/vrsp/: README.md  _sidebar.md  api-reference.md  architecture.md  authentication.md  cryptography.md  development.md  index.html  profile-download.md  quick-start.md  setup.md  test-profiles.md  troubleshooting.md
gui/: README.md  __init__.py  main.py  main_window.py
gui/services/: __init__.py  lpa_service.py  process_manager.py  profile_store.py
gui/widgets/: __init__.py  download_dialog.py  log_viewer.py  process_panel.py  profile_manager.py  profile_selector.py
latex/: final.tex
lpac/driver/: CMakeLists.txt  euicc-driver-loader.c
lpac/driver/apdu/: socket.c
lpac/euicc/: es10b.c  es9p.c
lpac/src/: CMakeLists.txt
lpac/src/applet/profile/: download.c
mno/: main.py  main_window.py
mno/services/: config.py  lpa_command.py  smdp_api.py
mno/widgets/: dashboard_panel.py  device_control_panel.py  eid_panel.py  profile_panel.py  session_panel.py
pysim/: hybrid_ka.py  nginx-smdpp-oqs.conf  nginx-smdpp.conf  osmo-smdpp-pqc.sh  osmo-smdpp.py  setup-venv.sh
pysim/certs-oqs-tls/: server-ecdsa.crt  server-ecdsa.crt.mldsa87.sig  server-ecdsa.key  server-mldsa87.key  server-mldsa87.pub  server-rsa.crt  server-rsa.crt.mldsa87.sig  server-rsa.key
pysim/pySim/esim/: es8p.py
pysim/pySim/esim/asn1/rsp/: rsp.asn
pysim/smdpp-data/: download_history.json
report/: README.txt  VERIFY_TRUE_METRICS.md  collect-metrics.sh  collect-real-metrics.sh  demo-metrics-system.sh  extract-true-metrics.sh  generate-visualizations.py  run-performance-analysis.sh  test-visualizations.sh
report/metrics/: classical.metrics  execution_times.metrics  pqc.metrics
scripts/: generate-mldsa-certs.py  generate-oqs-tls-certs.sh
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_full_protocol.c
tests/scripts/: demo-pqc-detailed.sh  test-classical-fallback.sh  test-hybrid-mode.sh  test-interop.sh  validate-pqc.sh
tests/unit/: CMakeLists.txt  test_hybrid_kdf.c  test_mlkem.c  test_mlkem_verbose.c
v-euicc/: CMakeLists.txt  LICENSE
v-euicc/certs-mldsa/: README.txt  euicc_cert_mldsa87.der  euicc_pk_mldsa87.pub  euicc_sk_mldsa87.key  root_ca_mldsa87.der  root_ca_pk_mldsa87.pub  root_ca_sk_mldsa87.key  smdp_cert_mldsa87.der  smdp_pk_mldsa87.pub  smdp_sk_mldsa87.key
v-euicc/include/: apdu_handler.h  cert_loader.h  crypto.h  euicc_state.h  protocol.h
v-euicc/src/: apdu_handler.c  cert_loader.c  crypto.c  euicc_state.c  main.c  protocol.c
